--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-01 Wed 11:05]
+#+CAPTION: Clock summary at [2017-02-01 Wed 11:39]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *20:47* |       |       | 100.0 |
+| *Total time*                                                                | *21:20* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 20:47   |       |       | 100.0 |
-| Active                                                                      |         | 20:47 |       | 100.0 |
+| Stories                                                                     | 21:20   |       |       | 100.0 |
+| Active                                                                      |         | 21:20 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   3.4 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  20.0 |
-| COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   1.0 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  26.1 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 10:15 |  49.3 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  19.5 |
+| COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.9 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  25.5 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 10:48 |  50.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -156,6 +156,7 @@ We could:
 - add meta-data to disable setting the enumerator value altogether.
 
 *** STARTED Add support for primitives across the pipeline            :story:
+    CLOCK: [2017-02-01 Wed 11:06]--[2017-02-01 Wed 11:39] =>  0:33
     CLOCK: [2017-02-01 Wed 11:01]--[2017-02-01 Wed 11:05] =>  0:04
     CLOCK: [2017-02-01 Wed 10:55]--[2017-02-01 Wed 11:01] =>  0:06
     CLOCK: [2017-02-01 Wed 10:43]--[2017-02-01 Wed 10:54] =>  0:11
@@ -248,6 +249,12 @@ because an alias implies they are interchangeable; this is what one is
 trying to avoid. One sneaky way out is to call primitives "builtins"
 and call these "primitives". This somewhat reflects the truth in that
 builtins are supposed to be hardware level concepts.
+
+*** Immutable types cannot be owned by mutable types                  :story:
+
+When we try to create a mutable class that has a property of an
+immutable type, the code fails to compile due to the swap
+method. This is because immutable types do not provide swap.
 
 *** "Assistant" type found in test model                              :story:
 
