--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,20 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-01 Wed 11:39]
+#+CAPTION: Clock summary at [2017-02-01 Wed 16:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *21:20* |       |       | 100.0 |
+| *Total time*                                                                | *24:31* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 21:20   |       |       | 100.0 |
-| Active                                                                      |         | 21:20 |       | 100.0 |
+| Stories                                                                     | 24:31   |       |       | 100.0 |
+| Active                                                                      |         | 24:31 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   3.4 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  19.5 |
-| COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.9 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  25.5 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 10:48 |  50.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.9 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  17.0 |
+| COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.8 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  22.2 |
+| STARTED Handle "special includes" correctly                                 |         |       |  1:44 |   7.1 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  50.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -155,8 +156,48 @@ We could:
 - add meta-data for users to supply their own values;
 - add meta-data to disable setting the enumerator value altogether.
 
+*** STARTED Handle "special includes" correctly                       :story:
+    CLOCK: [2017-02-01 Wed 15:09]--[2017-02-01 Wed 16:53] =>  1:44
+
+We did a quick hack to handle "special includes": we simply "detected"
+them in include builder and then did the appropriate action in each of
+the include providers. In order to make this work dynamically, we need
+somehow to have "associated includes" on a per type basis. For
+example:
+
+- type =x= requires include =y= in formatter =f=.
+
+This can easily be achieved via an "additional inclusion directive"
+which is a container. For example:
+
+:        "extensions" : {
+:                "quilt.cpp.helper.family" : "Dereferenceable",
+:                "quilt.cpp.types.class_header_formatter.inclusion_directive" : "<boost/weak_ptr.hpp>",
+
+Could have:
+
+:                "quilt.cpp.types.class_header_formatter.additional_inclusion_directive" : "<some_include.hpp>",
+
+If multiple are provided then they are all added. This highlights an
+important point: we need a way to inject type specific includes from a
+formatter. It makes no sense to declare all of these up front in a
+library since we do not know what all possible formatters are, nor
+what requirements they may have for inclusion. At the same time,
+formatters cannot be expected to declare types. The solution is to be
+able to "inject" these dependencies from a JSON file associated with
+the formatter. We could supply the qualified name and the properties
+to inject. This problem can be solved later on - create a separate
+story for this.
+
+Tasks:
+
+- move to the repository/factory pattern for dependencies;
+- rename meta-data to =inclusion_directive.principal=;
+- add =inclusion_directive.auxiliary=;
+- change code to also include auxiliary directives.
+
 *** STARTED Add support for primitives across the pipeline            :story:
-    CLOCK: [2017-02-01 Wed 14:02]
+    CLOCK: [2017-02-01 Wed 14:02]--[2017-02-01 Wed 15:08] =>  1:06
     CLOCK: [2017-02-01 Wed 11:40]--[2017-02-01 Wed 12:01] =>  0:21
     CLOCK: [2017-02-01 Wed 11:06]--[2017-02-01 Wed 11:39] =>  0:33
     CLOCK: [2017-02-01 Wed 11:01]--[2017-02-01 Wed 11:05] =>  0:04
