--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-02 Thu 09:20]
+#+CAPTION: Clock summary at [2017-02-02 Thu 10:28]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *27:19* |       |       | 100.0 |
+| *Total time*                                                                | *28:23* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 27:19   |       |       | 100.0 |
-| Active                                                                      |         | 27:19 |       | 100.0 |
+| Stories                                                                     | 28:23   |       |       | 100.0 |
+| Active                                                                      |         | 28:23 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.6 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  15.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.5 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  14.7 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.7 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  19.9 |
-| STARTED Handle "special includes" correctly                                 |         |       |  4:32 |  16.6 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  44.8 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  19.1 |
+| STARTED Handle "special includes" correctly                                 |         |       |  5:36 |  19.7 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  43.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -157,6 +157,9 @@ We could:
 - add meta-data to disable setting the enumerator value altogether.
 
 *** STARTED Handle "special includes" correctly                       :story:
+    CLOCK: [2017-02-02 Thu 10:24]--[2017-02-02 Thu 10:27] =>  0:03
+    CLOCK: [2017-02-02 Thu 09:49]--[2017-02-02 Thu 10:23] =>  0:34
+    CLOCK: [2017-02-02 Thu 09:21]--[2017-02-02 Thu 09:48] =>  0:27
     CLOCK: [2017-02-02 Thu 09:10]--[2017-02-02 Thu 09:20] =>  0:10
     CLOCK: [2017-02-02 Thu 09:04]--[2017-02-02 Thu 09:09] =>  0:05
     CLOCK: [2017-02-02 Thu 08:53]--[2017-02-02 Thu 09:03] =>  0:10
@@ -298,6 +301,13 @@ because an alias implies they are interchangeable; this is what one is
 trying to avoid. One sneaky way out is to call primitives "builtins"
 and call these "primitives". This somewhat reflects the truth in that
 builtins are supposed to be hardware level concepts.
+
+*** Drop "inclusion" prefix in quilt.cpp                              :story:
+
+The inclusion related classes in quilt.cpp have really long names. We
+probably don't really need them to have the "inclusion" prefix as we
+know what they are doing by looking at just
+"directive/dependencies". Drop the inclusion prefix across the board.
 
 *** Immutable types cannot be owned by mutable types                  :story:
 
