--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-02 Thu 10:28]
+#+CAPTION: Clock summary at [2017-02-02 Thu 10:32]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *28:23* |       |       | 100.0 |
+| *Total time*                                                                | *28:27* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 28:23   |       |       | 100.0 |
-| Active                                                                      |         | 28:23 |       | 100.0 |
+| Stories                                                                     | 28:27   |       |       | 100.0 |
+| Active                                                                      |         | 28:27 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.5 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  14.7 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  14.6 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.7 |
 | COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  19.1 |
-| STARTED Handle "special includes" correctly                                 |         |       |  5:36 |  19.7 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  43.2 |
+| STARTED Handle "special includes" generically                               |         |       |  5:40 |  19.9 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  43.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -156,7 +156,8 @@ We could:
 - add meta-data for users to supply their own values;
 - add meta-data to disable setting the enumerator value altogether.
 
-*** STARTED Handle "special includes" correctly                       :story:
+*** STARTED Handle "special includes" generically                     :story:
+    CLOCK: [2017-02-02 Thu 10:28]--[2017-02-02 Thu 10:32] =>  0:04
     CLOCK: [2017-02-02 Thu 10:24]--[2017-02-02 Thu 10:27] =>  0:03
     CLOCK: [2017-02-02 Thu 09:49]--[2017-02-02 Thu 10:23] =>  0:34
     CLOCK: [2017-02-02 Thu 09:21]--[2017-02-02 Thu 09:48] =>  0:27
