--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-02 Thu 10:32]
+#+CAPTION: Clock summary at [2017-02-02 Thu 15:08]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *28:27* |       |       | 100.0 |
+| *Total time*                                                                | *30:59* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 28:27   |       |       | 100.0 |
-| Active                                                                      |         | 28:27 |       | 100.0 |
+| Stories                                                                     | 30:59   |       |       | 100.0 |
+| Active                                                                      |         | 30:59 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.5 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  14.6 |
-| COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.7 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  19.1 |
-| STARTED Handle "special includes" generically                               |         |       |  5:40 |  19.9 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  43.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.3 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  13.4 |
+| COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.6 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  17.5 |
+| STARTED Handle "special includes" generically                               |         |       |  8:12 |  26.5 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  39.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -157,6 +157,9 @@ We could:
 - add meta-data to disable setting the enumerator value altogether.
 
 *** STARTED Handle "special includes" generically                     :story:
+    CLOCK: [2017-02-02 Thu 15:04]--[2017-02-02 Thu 15:08] =>  0:04
+    CLOCK: [2017-02-02 Thu 14:03]--[2017-02-02 Thu 15:03] =>  1:00
+    CLOCK: [2017-02-02 Thu 10:33]--[2017-02-02 Thu 12:01] =>  1:28
     CLOCK: [2017-02-02 Thu 10:28]--[2017-02-02 Thu 10:32] =>  0:04
     CLOCK: [2017-02-02 Thu 10:24]--[2017-02-02 Thu 10:27] =>  0:03
     CLOCK: [2017-02-02 Thu 09:49]--[2017-02-02 Thu 10:23] =>  0:34
