--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-02 Thu 15:53]
+#+CAPTION: Clock summary at [2017-02-02 Thu 16:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *31:42* |       |       | 100.0 |
+| *Total time*                                                                | *32:40* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 31:42   |       |       | 100.0 |
-| Active                                                                      |         | 31:42 |       | 100.0 |
+| Stories                                                                     | 32:40   |       |       | 100.0 |
+| Active                                                                      |         | 32:40 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.3 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  13.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.2 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  12.8 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.6 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  17.1 |
-| COMPLETED Test data for booleans is not oscillating correctly               |         |       |  0:17 |   0.9 |
-| STARTED Handle "special includes" generically                               |         |       |  8:38 |  27.2 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  38.6 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  16.6 |
+| COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   3.8 |
+| STARTED Handle "special includes" generically                               |         |       |  8:38 |  26.4 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  37.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -159,6 +159,9 @@ We could:
 
 *** COMPLETED Test data for booleans is not oscillating correctly     :story:
     CLOSED: [2017-02-02 Thu 15:51]
+    CLOCK: [2017-02-02 Thu 16:52]--[2017-02-02 Thu 16:53] =>  0:01
+    CLOCK: [2017-02-02 Thu 16:30]--[2017-02-02 Thu 16:52] =>  0:22
+    CLOCK: [2017-02-02 Thu 15:54]--[2017-02-02 Thu 16:29] =>  0:35
     CLOCK: [2017-02-02 Thu 15:36]--[2017-02-02 Thu 15:53] =>  0:17
 
 We are not handling correctly zero and one, both producing
@@ -167,6 +170,26 @@ board rather than false, false, true, ... This can cause tests to fail
 spuriously because we rely on generators where g(0) != g(1). If a
 class has only a property of type bool this (should) be a problem. Why
 it hasn't been thus far is not clear.
+
+Huge amount of time was spent chasing a red-herring: its not possible
+to have just a single boolean on a base class. This causes the canned
+tests to break. The reason why is because of the way the tests are
+executed and the way boolean works:
+
+- we always throw away the first output of the generator; this was
+  done to avoid it being equal to the default constructed instance of
+  a type.
+- however, the default constructed boolean is false whereas the first
+  sequence of the generator is actually true;
+- but the second value of the generator is false, which is equal to
+  the default. So whilst this technique works for non-oscillating
+  types, it breaks on booleans.
+- this problem will manifest itself whenever there is a boolean and no
+  other type (to force differences). The reason why we didn't notice
+  this before is because the types in trivial inheritance with
+  booleans are not currently being tested.
+- the problem was solved by ensuring the oscillations of the bools do
+  match the expectations of the tests.
 
 *** STARTED Handle "special includes" generically                     :story:
     CLOCK: [2017-02-02 Thu 15:09]--[2017-02-02 Thu 15:35] =>  0:26
