--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,25 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-04 Sat 23:10]
+#+CAPTION: Clock summary at [2017-02-05 Sun 10:57]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *45:47* |       |       | 100.0 |
+| *Total time*                                                                | *47:10* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 45:47   |       |       | 100.0 |
-| Active                                                                      |         | 45:47 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:13 |   2.7 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   1.6 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   9.1 |
+| Stories                                                                     | 47:10   |       |       | 100.0 |
+| Active                                                                      |         | 47:10 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:13 |   2.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   1.5 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   8.8 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.4 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  11.9 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  11.5 |
 | COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   2.7 |
-| COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   2.9 |
-| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  23.1 |
+| COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   2.8 |
+| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  22.4 |
 | POSTPONED Partial matching of built-ins doesn't work for certain types      |         |       |  0:50 |   1.8 |
-| COMPLETED Try to improve compilation times                                  |         |       |  1:39 |   3.6 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 18:25 |  40.2 |
+| COMPLETED Try to improve compilation times                                  |         |       |  1:39 |   3.5 |
+| COMPLETED Add support for primitives across the pipeline                    |         |       | 19:48 |  42.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -392,7 +392,10 @@ medium term. We should try to remove all the facets which we don't
 really need from the core models to see if we can reduce the build
 time by a fair bit (5 mins or more).
 
-*** STARTED Add support for primitives across the pipeline            :story:
+*** COMPLETED Add support for primitives across the pipeline          :story:
+    CLOSED: [2017-02-05 Sun 10:54]
+    CLOCK: [2017-02-05 Sun 09:51]--[2017-02-05 Sun 10:54] =>  1:03
+    CLOCK: [2017-02-04 Sat 23:11]--[2017-02-04 Sat 23:31] =>  0:20
     CLOCK: [2017-02-04 Sat 22:47]--[2017-02-04 Sat 23:10] =>  0:23
     CLOCK: [2017-02-04 Sat 21:12]--[2017-02-04 Sat 22:46] =>  1:34
     CLOCK: [2017-02-04 Sat 08:15]--[2017-02-04 Sat 08:26] =>  0:11
