--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,28 +13,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-05 Sun 17:05]
+#+CAPTION: Clock summary at [2017-02-05 Sun 17:22]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *49:03* |       |       | 100.0 |
+| *Total time*                                                                | *49:19* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 49:03   |       |       | 100.0 |
-| Active                                                                      |         | 49:03 |       | 100.0 |
+| Stories                                                                     | 49:19   |       |       | 100.0 |
+| Active                                                                      |         | 49:19 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:13 |   2.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   1.5 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   8.5 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   8.4 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.4 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  11.1 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  11.0 |
 | COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   2.5 |
 | COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   2.7 |
-| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  21.5 |
+| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  21.4 |
 | POSTPONED Partial matching of built-ins doesn't work for certain types      |         |       |  0:50 |   1.7 |
-| COMPLETED Try to improve compilation times                                  |         |       |  1:39 |   3.4 |
-| COMPLETED Add support for primitives across the pipeline                    |         |       | 19:48 |  40.4 |
+| COMPLETED Try to improve compilation times                                  |         |       |  1:39 |   3.3 |
+| COMPLETED Add support for primitives across the pipeline                    |         |       | 19:48 |  40.1 |
 | COMPLETED Drop "inclusion" prefix in quilt.cpp                              |         |       |  0:40 |   1.4 |
 | COMPLETED Mark elements that are valid enumeration underlying elements      |         |       |  0:19 |   0.6 |
-| STARTED Refactor yarn model validators                                      |         |       |  0:54 |   1.8 |
+| STARTED Refactor yarn model validators                                      |         |       |  1:10 |   2.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -541,6 +541,7 @@ The following are the valid types for primitives:
 Read to =can_be_primitive_underlier=.
 
 *** STARTED Refactor yarn model validators                            :story:
+    CLOCK: [2017-02-05 Sun 17:06]--[2017-02-05 Sun 17:22] =>  0:16
     CLOCK: [2017-02-05 Sun 16:45]--[2017-02-05 Sun 17:05] =>  0:20
     CLOCK: [2017-02-05 Sun 16:10]--[2017-02-05 Sun 16:44] =>  0:34
 
